tests/integration/snapshots/integration__test_json__array_empty.snap
---
source: tests/integration/test_json.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
[]
stdout --- 
[]
stderr --- 
<empty>
