tests/integration/snapshots/integration__test_json__array_single.snap
---
source: tests/integration/test_json.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
[1]
stdout --- 
[1]
stderr --- 
<empty>
