tests/integration/snapshots/integration__test_json__array_subarrays.snap
---
source: tests/integration/test_json.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
[["a"], [true, false]]
stdout --- 
[["a"], [true, false]]
stderr --- 
<empty>
