tests/integration/snapshots/integration__test_json__double_quote.snap
---
source: tests/integration/test_json.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
"
stdout --- 
<empty>
stderr --- 
error: expected closing quote
 --> stdin:1:1
  |
1 | "
  | ^
  | |
  | opening quote found here
  |
help: insert the missing closing quote
  |
1 | ""
  |  +
