tests/integration/snapshots/integration__test_json__empty_input.snap
---
source: tests/integration/test_json.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 

stdout --- 
<empty>
stderr --- 
error: expected json value, found no significant characters
 --> stdin:1:1
  |
1 |
  | ^
  |
help: insert a placeholder value
  |
1 |  "rust is a must"
  |
