tests/integration/snapshots/integration__test_json__exponent_missing_trailing_digits.snap
---
source: tests/integration/test_json.rs
expression: "format_output_snapshot(json_bytes, &annotated)"
---
case --- 
98e
stdout --- 
<empty>
stderr --- 
error: expected +/- or digit after exponent indicator, found no significant characters
 --> stdin:1:3
  |
1 | 98e
  | --^
  | | |
  | | exponent indicator found here
  | number with exponent found here
  |
help: add placeholder exponent digits
  |
1 | 98e+1
  |    ++
